# familly-nexus

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  pyproject copy.toml  pyproject.toml
action_plans/: Project Workspace Initialization Action Plan.md  instructions
backend/: .env.example  Dockerfile  app.py  models.py  pytest.ini  requirements.txt
backend/api/v1/: routes.py
backend/core/infrastructure/: exif_utils.py
backend/core/models/: person.py  photo.py  tag.py
backend/core/services/: person_service.py  photo_service.py  service_context.py  storage_service.py
backend/infrastructure/: exif_utils.py
backend/migrations/versions/: 20240318_add_s3_key.py
backend/scripts/: dev.py  init_minio.py
backend/tests/: conftest.py
backend/tests/unit/api/v1/: conftest.py  test_person_routes.py  test_photos_routes.py
backend/tests/unit/core/models/: test_models.py
backend/tests/unit/infrastructure/: test_exif_utils.py
backend/utils/: config.py
config/: development.env  production.env  test.env
docker/: docker-compose.dev.yml  docker-compose.prod.yml
docker/dockerfiles/: backend.Dockerfile  frontend.Dockerfile
docs/: Exploring S3 Mocking Tools — A Comparative Analysis of S3Mock, MinIO, and LocalStack.url  L'extension pgvector.url  improvements.md  search_ui_options.md  test_todos.md
docs/decisions/: Project Workspace Initialization Action Plan.md  Tech Stack Selection Rationale.md
frontend/: package-lock.json  package.json
frontend/src/: App.js  App.test.tsx  App.tsx  config.ts  routes.d.ts  theme.d.ts  theme.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx  index.ts
frontend/src/components/persons/: PersonList.tsx  index.ts
frontend/src/components/photos/: LocationPicker.tsx  PhotoCard.tsx  PhotoDetail.tsx  PhotoGrid.tsx  PhotoUpload.tsx
frontend/src/components/search/: QuickSearch.tsx  SearchFilters.tsx
frontend/src/pages/: Photos.tsx  Search.tsx  Upload.tsx  index.ts
frontend/src/pages/__tests__/: Photos.test.tsx  Upload.test.tsx
frontend/src/routes/: Routes.tsx
frontend/src/services/: geocoding.ts
frontend/src/services/__mocks__/: geocoding.ts
frontend/src/services/__tests__/: geocoding.test.ts
frontend/src/types/: index.ts
src/familly_nexus/backend/: Dockerfile  app.py
src/familly_nexus/backend/models/: person.py  photo.py
src/familly_nexus/backend/routes/: routes.py
src/familly_nexus/backend/services/: person_service.py  photo_service.py  service_context.py
src/familly_nexus/backend/utils/: exif_utils.py
src/familly_nexus/frontend/: Dockerfile  package-lock.json  package.json
src/familly_nexus/frontend/src/: App.js  App.tsx  index.tsx
tests/backend/models/: test_models.py
tests/backend/routes/: test_person_routes.py  test_photos_routes.py
tests/backend/services/: test_person_service.py  test_photo_service.py  test_service_context.py
tests/backend/utils/: test_exif_utils.py
tools/eslint/: .eslintrc.js
tools/prettier/: .prettierrc.js
(+31 files in other folders)
