[project]
name = "familly-nexus"
version = "0.1.0"
description = "a digital platform that allows family members to explore and share their collective memories"
authors = [
    {name = "jmarc580625",email = "jmarc580625+github@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
package-mode = false
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pgvector (>=0.3.6,<0.4.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
